fix(ui): settings panel dividers fixed and too long

--- a/src/content/styles/modules/_setting-controls.scss
+++ b/src/content/styles/modules/_setting-controls.scss
@@ -14,8 +14,7 @@
 
         .rv-settings-divider {
             left: 0;
-            position: absolute;
-            width: 100%;
+            margin: 0 -16px;
 
             // this will hide any extra dividers left when a layer setting is hidden
             + .rv-settings-divider {
